# welt

./: Cargo.toml
.cargo/: config.toml
crates/welt/: Cargo.toml
crates/weltc/: Cargo.toml
crates/weltc/src/: main.rs
crates/weltc/src/compile/: mod.rs  parse.rs
examples/: counter.welt  hello-world.welt
